--- a/Register.html
+++ b/Register.html
@@ -29,7 +29,7 @@
               <div class="col-lg-8">
                 <div class="card px-5 border-light">
                     <div class="card-body d-flex justify-content-center">
-                      <h1>Login</h1>
+                      <h1>Daftar</h1>
                     </div>
                     <form>
                         <div class="form-floating mb-3 mx-5">
@@ -40,11 +40,15 @@
                             <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
                             <label for="floatingPassword">Password</label>
                           </div>
+                          <div class="form-floating mb-3 mx-5">
+                            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                            <label for="floatingPassword"> Repeat Password</label>
+                          </div>
                           <div class="d-flex justify-content-center mb-3">
-                            <button type="submit" class="btn btn-primary mx-5">Login</button>
+                            <button type="submit" class="btn btn-primary mx-5">Daftar</button>
                           </div>
                           <center>
-                            <p>Belum punya akun? <a href="">Daftar</a></p>
+                            <p>Sudah Punya Akun? <a href="">Login</a></p>
                           </center>
                           <div class="d-flex justify-content-center my-3">
                             <button type="submit" class="btn btn-transprent mx-5">
