--- a/Index.html
+++ b/Index.html
@@ -4,32 +4,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<<<<<<< HEAD
-  <title>Home</title>
-=======
   <title>MODIF KITA</title>
->>>>>>> c678f318da88bae1f1c08e7861a10efbe5579b1b
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
 
-<<<<<<< HEAD
-<body>
-=======
 <body style="background-color: #E5E5E5;">
->>>>>>> c678f318da88bae1f1c08e7861a10efbe5579b1b
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
       <nav class="navbar navbar-dark bg-primary">
         <div class="container">
           <a class="navbar-brand" href="#">
-<<<<<<< HEAD
-            <img src="/frontend/images/logomk.png" alt="" width="170px" height="60px">
-=======
             <img src="/images/20220530_121304_0000-removebg-preview.png" alt="" width="160px" height="50px">
->>>>>>> c678f318da88bae1f1c08e7861a10efbe5579b1b
           </a>
         </div>
       </nav>
@@ -37,74 +25,37 @@
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse ms-5 ps-5" id="navbarNav">
         <ul class="navbar-nav ms-auto col-6">
-          <li class="nav-item col">
-<<<<<<< HEAD
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-=======
-            <a class="nav-link active" href="#">Home</a>
->>>>>>> c678f318da88bae1f1c08e7861a10efbe5579b1b
+          <li class="nav-item px-2 ms-2">
+            <a class="nav-link active href=" #">Home</a>
           </li>
-          <li class="nav-item col">
+          <li class="nav-item px-2 ms-2">
             <a class="nav-link" href="#">Category</a>
           </li>
-          <li class="nav-item col">
+          <li class="nav-item px-2 ms-2">
             <a class="nav-link" href="#">Galery</a>
           </li>
-          <li class="nav-item col">
-<<<<<<< HEAD
-            <a class="nav-link href=" #>Info</a>
-=======
+          <li class="nav-item px-2 ms-2">
             <a class="nav-link " href="#">Info</a>
->>>>>>> c678f318da88bae1f1c08e7861a10efbe5579b1b
           </li>
-          <li class="nav-item col">
+          <li class="nav-item px-2 ms-2">
             <a class="nav-link" href="#">Contact</a>
+          </li>
+          <li class="nav-item px-2 ms-2">
+            <a class="nav-link " href="">
+              <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart4"
+                viewBox="0 0 16 16">
+                <path
+                  d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z" />
+              </svg>
+            </a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-
   <div class="container">
-<<<<<<< HEAD
-    <div class="carousel my-5">
-      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-            aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-            aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-            aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="item"
-              style="background-image: url(images/website/116568582_758311891588632_346918748196988069_n.jpg);"></div>
-          </div>
-          <div class="carousel-item">
-            <div class="item" style="background-image: url(images/website/Motor/AEROX2.png);"></div>
-          </div>
-          <div class="carousel-item">
-            <div class="item" style="background-image: url(images/website/Motor/AEROX2.png);"></div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-          data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-          data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-    </div>
-  </div>
-=======
     <div class="header">
       <h1>MODIF KITA</h1>
       <p>Tempat Inspirasi Modif Kita Bersama</p>
@@ -172,7 +123,7 @@
               </div>
               <div class="col-6">
                 <h2 class="fs-4 mb-4">Lampu Alis + Devil</h2>
-                <h3 class="fs-3 fw-bold text-primary"> Rp.350.000</h3>
+                <h3 class="fs-3 fw-bold text-primary"> Rp.450.000</h3>
                 <div class="row mt-5 justify-content-between">
                   <div class="col-4">
                     <p>4.9 <img src="/images/website/Review.png" alt=""></p>
@@ -225,7 +176,7 @@
     <div class="container">
       <div class="row py-3">
         <div class="col-2"></div>
-        <div class="col-2 text-center">
+        <div class="col-2 text-center" style="background-color: ;##0d6efd">
           <img src="/images/website/Email.png" alt="">
           <p class="text-white">modifkita@gmail.com</p>
         </div>
@@ -248,7 +199,6 @@
   </footer>
 
 
->>>>>>> c678f318da88bae1f1c08e7861a10efbe5579b1b
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
